--- a/index.html
+++ b/index.html
@@ -484,6 +484,13 @@
                 </ul>
             </li>
             <li class="dropdown navDropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">View <b class="caret"></b></a>
+                <span class="dropdown-arrow"></span>
+                <ul class="dropdown-menu">
+                    <li><a id="menuVis" href="#">Toggle Menu Visibility</a></li>
+                </ul>
+            </li>
+            <li class="dropdown navDropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Examples <b class="caret"></b></a>
                 <span class="dropdown-arrow"></span>
                 <ul class="dropdown-menu" style="min-width: 200px;">
@@ -532,9 +539,9 @@
         <!--<form class="navbar-form navbar-right" action="#" role="search">-->
             <!--<div class="form-group">-->
               <!--<div class="input-group">-->
-                <div class="sliderInput floatRight" id="creasePercent">
-                    <span class="label-slider">Fold Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
-                    <input value="" placeholder="" class="form-control" type="text">
+                <div class="sliderInput floatRight" id="creasePercentNav">
+                    <span class="label-slider">Fold Angle : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+                    <!--<input value="" placeholder="" class="form-control" type="text">-->
                 </div>
               <!--</div>-->
             <!--</div>-->
@@ -548,6 +555,10 @@
 <div  id="threeContainer"></div>
 <canvas id="gpuMathCanvas"></canvas>
 <div id="controls">
+    <div class="sliderInput floatRight" id="creasePercent">
+        <span class="label-slider">Fold Angle (-1 to 1) : </span><div class="flat-slider ui-slider ui-corner-all ui-slider-horizontal ui-widget ui-widget-content"></div>
+        <input value="" placeholder="" class="form-control" type="text">
+    </div><br/><br/>
     <div id="simButtons" class="alignRight">
         <a href="#" id="start" class="paddingBottom btn btn-lg btn-success">Start Simulation</a>
         <a href="#" id="pause" class="paddingBottom btn btn-lg btn-warning">Pause Simulation</a>
