--- a/index.html
+++ b/index.html
@@ -712,7 +712,8 @@
             </div>
             <div id="virtualReality" class="hide indent smallTxt">
                 Status: &nbsp;<span id="VRstatus"></span><a class="about floatRight" href="#" id="aboutVR"><span class="fui-question-circle"></span></a>
-                <div id="VRoptions">
+                <div id="VRoptions"><br/>
+                    <a href="#" id="enterVR" class="displayBlock btn btn-lg btn-inverse"></a>
                 </div><br/><br/>
             </div><br/>
             <div>
